fix payment summary position on small screens

--- a/app/assets/sass/unbranded.scss
+++ b/app/assets/sass/unbranded.scss
@@ -84,6 +84,7 @@ table{
 }
 
 .payment-summary {
+  display: inline-block;
   border: 7px solid #DEE0E2;
   background-color: #fdfdf6;
   padding: .6em 1em 0;
